test_regress/t/t_class_name.out
%Error-UNSUPPORTED: t/t_class_name.v:12:16: Unsupported: 'static' class method
                                          : ... In instance t
   12 |    static task static_name;
      |                ^~~~~~~~~~~
%Error: Exiting due to
